<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        tools:context=".ui.DetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image_of_the_content"
                android:background="@android:color/black"
                android:scaleType="fitCenter"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@android:color/white"/>

        <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/name_"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/overview"
                android:textColor="@android:color/white"/>

        <TextView
                android:id="@+id/overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/channels_"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/vote_average"
                android:textColor="@android:color/white"/>

        <TextView
                android:id="@+id/vote_average"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/viewers_"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/genres"
                android:textColor="@android:color/white"/>

        <TextView
                android:id="@+id/genres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/viewers_"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"/>

        <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:textAllCaps="false"
                android:text="@string/like"/>

    </LinearLayout>

</ScrollView>